--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Get A Quote<i
+            <a href="/contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Get A Quote<i
                     class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
@@ -657,7 +657,7 @@
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Al-Jleeb Shuyoukh, Kuwait</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+965 9989 1549</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>help@alsharq.co</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
