--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,8 @@
                                   -->
                                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jleeb-Al Shuyoukh Kuwait
                                 </p>
-                                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965 9989 1549</a></p>
+                                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965
+                                        9989 1549</a></p>
                                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</p>
 
                             </div>
@@ -230,7 +231,8 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Al-Jleeb Shuyoukh, Kuwait</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965 9989 1549</a></p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965 9989 1549</a>
+                    </p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
@@ -272,7 +274,7 @@
                         &copy; <a class="border-bottom" href="#">Al-Sharq Co.</a> All Right Reserved.
 
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a class="border-bottom" href="sarwar76200">sarwar76200</a>
+                        Designed By <a class="border-bottom" href="https://github.com/sarwar76200">sarwar76200</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
