--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                     <a href="tel:+965 9989 1549">+965 9989 1549</a>
                 </small>
             </div>
-            <a href="/contact.html" class="btn btn-primary">Get A Quote <i class="fa fa-arrow-right ms-1"></i></a>
+            <a href="/contact.html#send-message" class="btn btn-primary">Get A Quote <i class="fa fa-arrow-right ms-1"></i></a>
         </div>
     </div>
     <div class="container-fluid bg-light p-0">
