--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         content="Al-Sharq Co., A Kuwait based professional cleaning service for homes and offices with 32+ years of experience."
         name="description">
 
+    <link rel="canonical" href="https://alsharqco.netlify.app"/>
+
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
