--- a/service.html
+++ b/service.html
@@ -11,6 +11,7 @@
         content="Al-Sharq Co., A Kuwait based professional cleaning service for homes and offices with 32+ years of experience."
         name="description">
 
+    <link rel="canonical" href="https://alsharqco.netlify.app" />
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -60,7 +61,8 @@
                     <a href="tel:+965 9989 1549">+965 9989 1549</a>
                 </small>
             </div>
-            <a href="/contact.html#send-message" class="btn btn-primary">Get A Quote <i class="fa fa-arrow-right ms-1"></i></a>
+            <a href="/contact.html#send-message" class="btn btn-primary">Get A Quote <i
+                    class="fa fa-arrow-right ms-1"></i></a>
         </div>
 
     </div>
