--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
         content="Al-Sharq Co., A Kuwait based professional cleaning service for homes and offices with 32+ years of experience."
         name="description">
 
+
+    <link rel="canonical" href="https://alsharqco.netlify.app" />
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -50,7 +52,8 @@
                     <a href="tel:+965 9989 1549">+965 9989 1549</a>
                 </small>
             </div>
-            <a href="/contact.html#send-message" class="btn btn-primary">Get A Quote <i class="fa fa-arrow-right ms-1"></i></a>
+            <a href="/contact.html#send-message" class="btn btn-primary">Get A Quote <i
+                    class="fa fa-arrow-right ms-1"></i></a>
         </div>
 
     </div>
@@ -193,7 +196,7 @@
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div id="send-message"  class="col-md-6">
+                <div id="send-message" class="col-md-6">
                     <div class="wow fadeInUp" data-wow-delay="0.2s">
                         <p class="mb-3">Have a question, need a custom cleaning quote, or want to learn more about our
                             services? We're here to help! Simply fill out the form below, and one of our friendly team
