add canonical tag

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         name="description">
 
 
-    <link rel="canonical" href="https://alsharqco.netlify.app" />
+    <link rel="canonical" href="https://alsharqco.netlify.app/contact" />
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
