--- a/contact.html
+++ b/contact.html
@@ -183,18 +183,20 @@
                         </div>
                         <div class="col-md-4">
                             <div class="bg-light d-flex flex-column justify-content-center p-4">
-                                <h5 class="text-uppercase">SOCIAL</h5>
-                                <p class="mb-2"><i class="fa-brands fa-whatsapp me-3"></i>+965 9989 1549</p>
-                                <p class="mb-2"><i class="fa-brands fa-instagram me-3"></i>Al-Sharq Co.</p>
+                                <h5 class="text-uppercase">Social</h5>
+                                <a href="https://wa.me/+96599891549" class="mb-2"><i
+                                        class="fa-brands fa-whatsapp me-3"></i>+965 9989 1549</a>
+                                <a href="https://www.instagram.com/altawasolclean" class="mb-2"><i
+                                        class="fa-brands fa-instagram me-3"></i>Al-Sharq Co.</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 wow fadeIn" data-wow-delay="0.1s">
-                    <iframe
+                    <iframe class="position-relative rounded w-100 h-100"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11707.109343806562!2d47.94351889460881!3d29.26634015968839!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1750924470415!5m2!1sen!2sbd"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        frameborder="0" style="min-height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
+                        tabindex="0"></iframe>
                 </div>
                 <div id="send-message" class="col-md-6">
                     <div class="wow fadeInUp" data-wow-delay="0.2s">
