--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                         we create healthier, more comfortable environments tailored to your unique requirements.
                     </p>
                     <div style="display: flex; flex-direction: column; gap: 10px;" class="mb-3 pb-3">
-                        <div style="width: max-content" class=" wow fadeIn" data-wow-delay="0.1s">
+                        <div style="width: fit-content" class=" wow fadeIn" data-wow-delay="0.1s">
                             <div class="d-flex">
                                 <div class="bg-light d-flex flex-shrink-0 align-items-center justify-content-center mt-1"
                                     style="width: 45px; height: 45px;">
@@ -312,7 +312,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: max-content" class=" wow fadeIn" data-wow-delay="0.2s">
+                        <div style="width: fit-content" class=" wow fadeIn" data-wow-delay="0.2s">
                             <div class="d-flex">
                                 <div class="bg-light d-flex flex-shrink-0 align-items-center justify-content-center mt-1"
                                     style="width: 45px; height: 45px;">
@@ -324,7 +324,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: max-content" class=" wow fadeIn" data-wow-delay="0.3s">
+                        <div style="width: fit-content" class=" wow fadeIn" data-wow-delay="0.3s">
                             <div class="d-flex">
                                 <div class="bg-light d-flex flex-shrink-0 align-items-center justify-content-center mt-1"
                                     style="width: 45px; height: 45px;">
@@ -337,7 +337,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: max-content" class=" wow fadeIn" data-wow-delay="0.4s">
+                        <div style="width: fit-content" class=" wow fadeIn" data-wow-delay="0.4s">
                             <div class="d-flex">
                                 <div class="bg-light d-flex flex-shrink-0 align-items-center justify-content-center mt-1"
                                     style="width: 45px; height: 45px;">
@@ -350,7 +350,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: max-content" class=" wow fadeIn" data-wow-delay="0.5s">
+                        <div style="width: fit-content" class=" wow fadeIn" data-wow-delay="0.5s">
                             <div class="d-flex">
                                 <div class="bg-light d-flex flex-shrink-0 align-items-center justify-content-center mt-1"
                                     style="width: 45px; height: 45px;">
