--- a/service.html
+++ b/service.html
@@ -51,8 +51,8 @@
     <!-- Topbar Start -->
     <div id="mobile-topbar" class="d-flex d-lg-none mobile-topbar px-4"
         style="display: flex; justify-content: space-between; align-items: center;">
-        <i id="mobile-topbar-toggler" onclick="closeTopBar()" style="font-size: x-large;"
-            class="py-2 fa-regular fa-circle-xmark"></i>
+        <i id="mobile-topbar-toggler" onclick="closeTopBar()" style="font-size: large;"
+            class="py-0 fa-regular fa-circle-xmark"></i>
 
         <div style="display: flex; flex-direction: row; align-items: center; column-gap: 10px;">
             <div>
@@ -61,8 +61,8 @@
                     <a href="tel:+965 9989 1549">+965 9989 1549</a>
                 </small>
             </div>
-            <a href="/contact.html#send-message" class="btn btn-primary">Get A Quote <i
-                    class="fa fa-arrow-right ms-1"></i></a>
+            <a href="/contact.html#send-message" style="padding: 5px; font-size: small;" class="btn btn-primary">Get A
+                Quote <i class="fa fa-arrow-right ms-1"></i></a>
         </div>
 
     </div>
