--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         content="Al-Sharq Co., A Kuwait based professional cleaning service for homes and offices with 32+ years of experience."
         name="description">
 
-    <link rel="canonical" href="https://alsharqco.netlify.app"/>
+    <link rel="canonical" href="https://alsharqco.netlify.app" />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -61,7 +61,8 @@
                     <a href="tel:+965 9989 1549">+965 9989 1549</a>
                 </small>
             </div>
-            <a href="/contact.html#send-message" style="padding: 5px; font-size: small;" class="btn btn-primary">Get A Quote <i class="fa fa-arrow-right ms-1"></i></a>
+            <a href="/contact.html#send-message" style="padding: 5px; font-size: small;" class="btn btn-primary">Get A
+                Quote <i class="fa fa-arrow-right ms-1"></i></a>
         </div>
 
     </div>
