fix double topbar

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         name="description">
 
 
-    <link rel="canonical" href="https://alsharqco.netlify.app/contact" />
+    <link rel="canonical" href="https://www.alsharqco.netlify.app/contact" />
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -40,23 +40,6 @@
 
 <body>
     <!-- Spinner Start -->
-    <div id="mobile-topbar" class="d-flex d-lg-none mobile-topbar px-4"
-        style="display: flex; justify-content: space-between; align-items: center;">
-        <i id="mobile-topbar-toggler" onclick="closeTopBar()" style="font-size: x-large;"
-            class="py-2 fa-regular fa-circle-xmark"></i>
-
-        <div style="display: flex; flex-direction: row; align-items: center; column-gap: 10px;">
-            <div>
-                <small>
-                    <i class="fa fa-phone-alt text-primary me-1"></i>
-                    <a href="tel:+965 9989 1549">+965 9989 1549</a>
-                </small>
-            </div>
-            <a href="/contact.html#send-message" class="btn btn-primary">Get A Quote <i
-                    class="fa fa-arrow-right ms-1"></i></a>
-        </div>
-
-    </div>
     <div id="spinner"
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
@@ -83,6 +66,34 @@
                 Quote <i class="fa fa-arrow-right ms-1"></i></a>
         </div>
 
+    </div>
+    <div class="container-fluid bg-light p-0">
+        <div class="row gx-0 d-none d-lg-flex">
+            <div class="col-lg-7 px-5 text-start">
+                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
+                    <small class="fa fa-map-marker-alt text-primary me-2"></small>
+                    <small>Jleeb-Al Shuyoukh, Kuwait</small>
+                </div>
+                <div class="h-100 d-inline-flex align-items-center py-3">
+                    <small class="far fa-clock text-primary me-2"></small>
+                    <small>Sat - Thu : 08:00 AM - 10:00 PM</small>
+                </div>
+            </div>
+            <div class="col-lg-5 px-5 text-end">
+                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
+                    <small class="fa fa-phone-alt text-primary me-2"></small>
+                    <a href="tel:+965 9989 1549">+965 9989 1549</a>
+                </div>
+                <div class="h-100 d-inline-flex align-items-center">
+                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-sm-square bg-white text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- Topbar End -->
 
