--- a/service.html
+++ b/service.html
@@ -11,7 +11,7 @@
         content="Al-Sharq Co., A Kuwait based professional cleaning service for homes and offices with 32+ years of experience."
         name="description">
 
-    <link rel="canonical" href="https://alsharqco.netlify.app/service" />
+    <link rel="canonical" href="https://www.alsharqco.netlify.app/service" />
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
