--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Al-Sharq Cleaning Co. Kuwait</title>
+    <title>Al-Sharq Co. - Kuwait's best cleaning solutions </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Cleaning, Carpet Cleaning, Sofa Cleaning, Home Cleaning, Office Cleaning, Kuwait, Al-Sharq"
         name="keywords">
