add alt to images

--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <!-- <h2 class="m-0 text-primary"><i class="fa fa-car me-3"></i>Al-Sharq Co.</h2> -->
             <div id="logo">
-                <img src="./img/logo1.svg">
+                <img alt="alsharq-logo" src="./img/logo1.svg">
             </div>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -170,7 +170,7 @@
                                 </p>
                                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965
                                         9989 1549</a></p>
-                                <p class="mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</p>
+                                <a href="mailto:support@alsharq.co" class="color-inherit mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</a>
 
                             </div>
                         </div>
