--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <!-- <h2 class="m-0 text-primary"><i class="fa fa-car me-3"></i>Al-Sharq Co.</h2> -->
             <div id="logo">
-                <img src="./img/logo1.svg">
+                <img alt="alsharq-logo" src="./img/logo1.svg">
             </div>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -200,7 +200,7 @@
                 <div class="col-lg-6 pt-4" style="min-height: 400px;">
                     <div class="position-relative h-100 wow fadeIn" data-wow-delay="0.1s">
                         <img class="position-absolute img-fluid w-100 h-100" src="img/about.jpg"
-                            style="object-fit: cover;" alt="">
+                            style="object-fit: cover;" alt="Person cleaning kitchen">
                         <div class="position-absolute top-0 end-0 mt-n4 me-n4 py-4 px-5"
                             style="background: rgba(0, 0, 0, .08);">
                             <h1 class="display-4 text-white mb-0">32 <span class="fs-4">Years</span></h1>
@@ -426,7 +426,7 @@
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jleeb-Al Shuyoukh, Kuwait</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965 9989 1549</a>
                     </p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</p>
+                    <a href="mailto:support@alsharq.co" class="text-white mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</a>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
