--- a/service.html
+++ b/service.html
@@ -102,7 +102,7 @@
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <!-- <h2 class="m-0 text-primary"><i class="fa fa-car me-3"></i>Al-Sharq Co.</h2> -->
             <div id="logo">
-                <img src="./img/logo1.svg">
+                <img alt="alsharq-logo" src="./img/logo1.svg">
             </div>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -190,7 +190,7 @@
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
                                         <img class="position-absolute img-fluid w-100 h-100" src="img/service-1.jpg"
-                                            style="object-fit: cover;" alt="">
+                                            style="object-fit: cover;" alt="Glass cleaning">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -212,7 +212,7 @@
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
                                         <img class="position-absolute img-fluid w-100 h-100" src="img/service-2.jpg"
-                                            style="object-fit: cover;" alt="">
+                                            style="object-fit: cover;" alt="Sofa cleaning">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -233,7 +233,7 @@
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
                                         <img class="position-absolute img-fluid w-100 h-100" src="img/service-3.jpg"
-                                            style="object-fit: cover;" alt="">
+                                            style="object-fit: cover;" alt="Marble polishing">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -254,7 +254,7 @@
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
                                         <img class="position-absolute img-fluid w-100 h-100" src="img/service-4.jpg"
-                                            style="object-fit: cover;" alt="">
+                                            style="object-fit: cover;" alt="Carpet cleaning">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -384,7 +384,7 @@
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jleeb-Al Shuyoukh, Kuwait</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965 9989 1549</a>
                     </p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</p>
+                    <a href="mailto:support@alsharq.co" class="text-white mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</a>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
