seo best practice

--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
                                     <h6 style="font-weight: normal;" class="text-white mb-5 animated slideInUp">
                                         Experience 5-star
                                         service tailored to your space — where spotless results meet expert care.</h6>
-                                    <a href="./service.html"
+                                    <!-- <a  href="./service.html"
                                         class="btn btn-primary py-3 px-5 animated slideInDown">Learn More<i
-                                            class="fa fa-arrow-right ms-3"></i></a>
+                                            class="fa fa-arrow-right ms-3"></i></a> -->
                                 </div>
                                 <!-- <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
                                     <img class="img-fluid" src="img/carousel-1.png" alt="">
@@ -175,9 +175,9 @@
                                     <h6 style="font-weight: normal;" class="text-white mb-5 animated slideInUp">
                                         With over 32 years of experience, our team delivers precision, safety, and
                                         satisfaction in every project.</h6>
-                                    <a href="./service.html"
+                                    <!-- <a href="./service.html"
                                         class="btn btn-primary py-3 px-5 animated slideInDown">Learn More<i
-                                            class="fa fa-arrow-right ms-3"></i></a>
+                                            class="fa fa-arrow-right ms-3"></i></a> -->
                                 </div>
                                 <!-- <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
                                     <img class="img-fluid" src="img/carousel-2.png" alt="">
@@ -198,9 +198,9 @@
                                     <h6 style="font-weight: normal;" class="text-white mb-5 animated slideInUp">
                                         Our promise is simple: dependable service, unmatched standards, and complete
                                         peace of mind.</h6>
-                                    <a href="./service.html"
+                                    <!-- <a href="./service.html"
                                         class="btn btn-primary py-3 px-5 animated slideInDown">Learn More<i
-                                            class="fa fa-arrow-right ms-3"></i></a>
+                                            class="fa fa-arrow-right ms-3"></i></a> -->
                                 </div>
                                 <!-- <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
                                     <img class="img-fluid" src="img/carousel-2.png" alt="">
