--- a/about.html
+++ b/about.html
@@ -84,12 +84,12 @@
                     <a href="tel:+965 9989 1549">+965 9989 1549</a>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i
+                    <a aria-label="Facebook page" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
                             class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i
+                    <a aria-label="Twitter account" class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-twitter"></i></a>
+                    <a aria-label="Linkedin profile" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
                             class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
+                    <a aria-label="Instagram profile" class="btn btn-sm-square bg-white text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -310,7 +310,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
                     <i class="fa fa-users-cog fa-2x text-white mb-3"></i>
-                    <div style="display: flex; flex-direction: row; align-items: center; justify-content: center;">
+                    <div class="flex flex-row items-center justify-center">
                         <h2 class="text-white mb-2" data-toggle="counter-up">35</h2>
                         <h2 class="text-white mb-2">+</h2>
                     </div>
@@ -318,7 +318,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
                     <i class="fa fa-users fa-2x text-white mb-3"></i>
-                    <div style="display: flex; flex-direction: row; align-items: center; justify-content: center;">
+                    <div class="flex flex-row items-center justify-center">
                         <h2 class="text-white mb-2" data-toggle="counter-up">3000</h2>
                         <h2 class="text-white mb-2">+</h2>
                     </div>
@@ -326,7 +326,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
                     <i class="fa fa-check-circle fa-2x text-white mb-3"></i>
-                    <div style="display: flex; flex-direction: row; align-items: center; justify-content: center;">
+                    <div class="flex flex-row items-center justify-center">
                         <h2 class="text-white mb-2" data-toggle="counter-up">5000</h2>
                         <h2 class="text-white mb-2">+</h2>
                     </div>
@@ -428,10 +428,10 @@
                     </p>
                     <a href="mailto:support@alsharq.co" class="text-white mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</a>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a aria-label="Twitter account" class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                        <a aria-label="Facebook page" class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a aria-label="Youtube channel" class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                        <a aria-label="Linkedin profile" class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
