--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
                     <a href="tel:+965 9989 1549">+965 9989 1549</a>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i
+                    <a aria-label="Facebook page" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
                             class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i
+                    <a aria-label="Twitter account" class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-twitter"></i></a>
+                    <a aria-label="Linkedin profile" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
                             class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square bg-white text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
+                    <a aria-label="Instagram profile" class="btn btn-sm-square bg-white text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -149,9 +149,9 @@
                                 <div class="col-10 col-lg-7 text-center text-lg-start">
                                     <h1 class="display-3 text-white mb-2 pb-3 animated slideInDown">Flawless Cleaning,
                                         Every Time</h1>
-                                    <h6 style="font-weight: normal;" class="text-white mb-5 animated slideInUp">
+                                    <h2 class="subtitle-text text-white mb-5 animated slideInUp">
                                         Experience 5-star
-                                        service tailored to your space — where spotless results meet expert care.</h6>
+                                        service tailored to your space — where spotless results meet expert care.</h2>
                                     <!-- <a  href="./service.html"
                                         class="btn btn-primary py-3 px-5 animated slideInDown">Learn More<i
                                             class="fa fa-arrow-right ms-3"></i></a> -->
@@ -172,9 +172,9 @@
                                     <!-- <h6 class="text-white text-uppercase mb-3 animated slideInDown">Cleaning</h6> -->
                                     <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Trusted Experts,
                                         Proven Results</h1>
-                                    <h6 style="font-weight: normal;" class="text-white mb-5 animated slideInUp">
+                                    <h2 class="subtitle-text text-white mb-5 animated slideInUp">
                                         With over 32 years of experience, our team delivers precision, safety, and
-                                        satisfaction in every project.</h6>
+                                        satisfaction in every project.</h2>
                                     <!-- <a href="./service.html"
                                         class="btn btn-primary py-3 px-5 animated slideInDown">Learn More<i
                                             class="fa fa-arrow-right ms-3"></i></a> -->
@@ -195,9 +195,9 @@
                                     <!-- <h6 class="text-white text-uppercase mb-3 animated slideInDown">Cleaning</h6> -->
                                     <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Driven by Quality,
                                         Backed by Commitment</h1>
-                                    <h6 style="font-weight: normal;" class="text-white mb-5 animated slideInUp">
+                                    <h2 class="subtitle-text text-white mb-5 animated slideInUp">
                                         Our promise is simple: dependable service, unmatched standards, and complete
-                                        peace of mind.</h6>
+                                        peace of mind.</h2>
                                     <!-- <a href="./service.html"
                                         class="btn btn-primary py-3 px-5 animated slideInDown">Learn More<i
                                             class="fa fa-arrow-right ms-3"></i></a> -->
@@ -383,7 +383,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
                     <i class="fa fa-users-cog fa-2x text-white mb-3"></i>
-                    <div style="display: flex; flex-direction: row; align-items: center; justify-content: center;">
+                    <div class="flex flex-row items-center justify-center">
                         <h2 class="text-white mb-2" data-toggle="counter-up">35</h2>
                         <h2 class="text-white mb-2">+</h2>
                     </div>
@@ -391,7 +391,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
                     <i class="fa fa-users fa-2x text-white mb-3"></i>
-                    <div style="display: flex; flex-direction: row; align-items: center; justify-content: center;">
+                    <div class="flex flex-row items-center justify-center">
                         <h2 class="text-white mb-2" data-toggle="counter-up">3000</h2>
                         <h2 class="text-white mb-2">+</h2>
                     </div>
@@ -399,7 +399,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
                     <i class="fa fa-check-circle fa-2x text-white mb-3"></i>
-                    <div style="display: flex; flex-direction: row; align-items: center; justify-content: center;">
+                    <div class="flex flex-row items-center justify-center">
                         <h2 class="text-white mb-2" data-toggle="counter-up">5000</h2>
                         <h2 class="text-white mb-2">+</h2>
                     </div>
@@ -719,12 +719,17 @@
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jleeb-Al Shuyoukh, Kuwait</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965 9989 1549</a>
                     </p>
-                    <a href="mailto:support@alsharq.co" class="text-white mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</a>
+                    <a href="mailto:support@alsharq.co" class="text-white mb-2"><i
+                            class="fa fa-envelope me-3"></i>support@alsharq.co</a>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a aria-label="Twitter account" class="btn btn-outline-light btn-social" href=""><i
+                                class="fab fa-twitter"></i></a>
+                        <a aria-label="Facebook page" class="btn btn-outline-light btn-social" href=""><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a aria-label="Youtube channel" class="btn btn-outline-light btn-social" href=""><i
+                                class="fab fa-youtube"></i></a>
+                        <a aria-label="Linkedin profile" class="btn btn-outline-light btn-social" href=""><i
+                                class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
