seo best practices

--- a/404.html
+++ b/404.html
@@ -110,7 +110,7 @@
                 <img alt="alsharq-logo" src="./img/logo1.svg">
             </div>
         </a>
-        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <button aria-label="Mobile navbar toggler" type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
