--- a/contact.html
+++ b/contact.html
@@ -87,10 +87,12 @@
                 <div class="h-100 d-inline-flex align-items-center">
                     <a aria-label="Facebook page" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
                             class="fab fa-facebook-f"></i></a>
-                    <a aria-label="Twitter account" class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-twitter"></i></a>
+                    <a aria-label="Twitter account" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
+                            class="fab fa-twitter"></i></a>
                     <a aria-label="Linkedin profile" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
                             class="fab fa-linkedin-in"></i></a>
-                    <a aria-label="Instagram profile" class="btn btn-sm-square bg-white text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
+                    <a aria-label="Instagram profile" class="btn btn-sm-square bg-white text-primary me-0" href=""><i
+                            class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -106,7 +108,8 @@
                 <img alt="alsharq-logo" src="./img/logo1.svg">
             </div>
         </a>
-        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <button aria-label="Mobile navbar toggler" type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -170,7 +173,8 @@
                                 </p>
                                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965
                                         9989 1549</a></p>
-                                <a href="mailto:support@alsharq.co" class="color-inherit mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</a>
+                                <a href="mailto:support@alsharq.co" class="color-inherit mb-2"><i
+                                        class="fa fa-envelope me-3"></i>support@alsharq.co</a>
 
                             </div>
                         </div>
@@ -259,10 +263,14 @@
                     </p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</p>
                     <div class="d-flex pt-2">
-                        <a aria-label="Twitter account" class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a aria-label="Facebook page" class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a aria-label="Youtube channel" class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a aria-label="Linkedin profile" class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a aria-label="Twitter account" class="btn btn-outline-light btn-social" href=""><i
+                                class="fab fa-twitter"></i></a>
+                        <a aria-label="Facebook page" class="btn btn-outline-light btn-social" href=""><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a aria-label="Youtube channel" class="btn btn-outline-light btn-social" href=""><i
+                                class="fab fa-youtube"></i></a>
+                        <a aria-label="Linkedin profile" class="btn btn-outline-light btn-social" href=""><i
+                                class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -315,7 +323,8 @@
 
 
     <!-- Back to Top -->
-    <a aria-label="Back to top" href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a aria-label="Back to top" href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i
+            class="bi bi-arrow-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
