seo: fix heading size

--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@
                     <div class="d-flex py-5 px-4">
                         <i class="fa fa-certificate fa-3x text-primary flex-shrink-0"></i>
                         <div class="ps-4">
-                            <h5 class="mb-3">Quality Assurance</h5>
+                            <h4 class="mb-3 font-20">Quality Assurance</h4>
                             <p>We're committed to delivering consistently high standards of cleanliness using top-grade
                                 products and proven techniques.</p>
                             <a class="text-secondary border-bottom" href="">Read More</a>
@@ -169,7 +169,7 @@
                     <div class="d-flex bg-light py-5 px-4">
                         <i class="fa fa-users-cog fa-3x text-primary flex-shrink-0"></i>
                         <div class="ps-4">
-                            <h5 class="mb-3">Skilled Professionals</h5>
+                            <h4 class="mb-3 font-20">Skilled Professionals</h4>
                             <p>Our team is trained, certified, and experienced — ensuring every task is completed with
                                 care and professionalism.</p>
                             <a class="text-secondary border-bottom" href="">Read More</a>
@@ -180,7 +180,7 @@
                     <div class="d-flex py-5 px-4">
                         <i class="fa fa-tools fa-3x text-primary flex-shrink-0"></i>
                         <div class="ps-4">
-                            <h5 class="mb-3">Advanced Tools & Technology</h5>
+                            <h4 class="mb-3 font-20">Advanced Tools & Technology</h4>
                             <p>We utilize modern equipment and innovative cleaning methods to ensure efficient and
                                 thorough results.</p>
                             <a class="text-secondary border-bottom" href="">Read More</a>
