--- a/service.html
+++ b/service.html
@@ -58,7 +58,7 @@
             <div>
                 <small>
                     <i class="fa fa-phone-alt text-primary me-1"></i>
-                    <a href="tel:+965 9989 1549">+965 9989 1549</a>
+                    <a class="text-primary" href="tel:+965 9989 1549">+965 9989 1549</a>
                 </small>
             </div>
             <a href="/contact.html#send-message" style="padding: 5px; font-size: small;" class="btn btn-primary">Get A
@@ -81,7 +81,7 @@
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <a href="tel:+965 9989 1549">+965 9989 1549</a>
+                    <a class="text-primary" href="tel:+965 9989 1549">+965 9989 1549</a>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <a aria-label="Facebook page" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
