--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@
                     <div class="d-flex py-5 px-4">
                         <i class="fa fa-certificate fa-3x text-primary flex-shrink-0"></i>
                         <div class="ps-4">
-                            <h4 class="mb-3 font-20">Quality Assurance</h4>
+                            <h1 class="mb-3 font-20">Quality Assurance</h1>
                             <p>We're committed to delivering consistently high standards of cleanliness using top-grade
                                 products and proven techniques.</p>
                             <a class="text-secondary border-bottom" href="">Read More</a>
@@ -169,7 +169,7 @@
                     <div class="d-flex bg-light py-5 px-4">
                         <i class="fa fa-users-cog fa-3x text-primary flex-shrink-0"></i>
                         <div class="ps-4">
-                            <h4 class="mb-3 font-20">Skilled Professionals</h4>
+                            <h1 class="mb-3 font-20">Skilled Professionals</h1>
                             <p>Our team is trained, certified, and experienced — ensuring every task is completed with
                                 care and professionalism.</p>
                             <a class="text-secondary border-bottom" href="">Read More</a>
@@ -180,7 +180,7 @@
                     <div class="d-flex py-5 px-4">
                         <i class="fa fa-tools fa-3x text-primary flex-shrink-0"></i>
                         <div class="ps-4">
-                            <h4 class="mb-3 font-20">Advanced Tools & Technology</h4>
+                            <h1 class="mb-3 font-20">Advanced Tools & Technology</h1>
                             <p>We utilize modern equipment and innovative cleaning methods to ensure efficient and
                                 thorough results.</p>
                             <a class="text-secondary border-bottom" href="">Read More</a>
@@ -209,7 +209,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h6 class="text-primary text-uppercase">About Us</h6>
+                    <h1 class="font-18 text-primary text-uppercase">About Us</h1>
                     <h1 class="mb-4"><span class="text-primary">Al-Sharq Co.</span> Your Trusted Partner in Professional
                         Cleaning Solutions</h1>
                     <p class="mb-4"><span class="text-primary">Al-Sharq Co.</span> is your trusted partner for all
