--- a/contact.html
+++ b/contact.html
@@ -158,7 +158,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="text-primary text-uppercase">Contact Us</h6>
+                <h1 class="font-18 text-primary text-uppercase">Contact Us</h1>
                 <h1 class="mb-5">Talk to our expert team</h1>
             </div>
             <div class="row g-4">
