--- a/service.html
+++ b/service.html
@@ -154,7 +154,7 @@
     <div class="container-xxl service py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="text-primary text-uppercase">Our Services</h6>
+                <h1 class="font-18 text-primary text-uppercase">Our Services</h1>
                 <h1 class="mb-5">Explore Our Services</h1>
             </div>
             <div class="row g-4 wow fadeInUp" data-wow-delay="0.3s">
@@ -341,7 +341,7 @@
     <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
             <div class="text-center">
-                <h6 class="text-primary text-uppercase">Testimonial</h6>
+                <h1 class="font-18 text-primary text-uppercase">Testimonial</h1>
                 <h1 class="mb-5">Our Clients Say!</h1>
             </div>
             <div class="owl-carousel testimonial-carousel position-relative">
