--- a/404.html
+++ b/404.html
@@ -58,8 +58,8 @@
         <div style="display: flex; flex-direction: row; align-items: center; column-gap: 10px;">
             <div>
                 <small>
-                    <i class="fa fa-phone-alt text-primary me-1"></i>
-                    <a class="text-primary" href="tel:+965 9989 1549">+965 9989 1549</a>
+                    <i class="fa fa-phone-alt text-secondary me-1"></i>
+                    <a class="text-secondary" href="tel:+965 9989 1549">+965 9989 1549</a>
                 </small>
             </div>
             <a href="/contact.html#send-message" style="padding: 5px; font-size: small;" class="btn btn-primary">Get A
@@ -89,10 +89,12 @@
                 <div class="h-100 d-inline-flex align-items-center">
                     <a aria-label="Facebook page" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
                             class="fab fa-facebook-f"></i></a>
-                    <a aria-label="Twitter account" class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-twitter"></i></a>
+                    <a aria-label="Twitter account" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
+                            class="fab fa-twitter"></i></a>
                     <a aria-label="Linkedin profile" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
                             class="fab fa-linkedin-in"></i></a>
-                    <a aria-label="Instagram profile" class="btn btn-sm-square bg-white text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
+                    <a aria-label="Instagram profile" class="btn btn-sm-square bg-white text-primary me-0" href=""><i
+                            class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -110,7 +112,8 @@
                 <img alt="alsharq-logo" src="./img/logo1.svg">
             </div>
         </a>
-        <button aria-label="Mobile navbar toggler" type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <button aria-label="Mobile navbar toggler" type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -173,7 +176,7 @@
     <!-- 404 End -->
 
 
-   <!-- Footer Start -->
+    <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
@@ -182,12 +185,17 @@
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jleeb-Al Shuyoukh, Kuwait</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965 9989 1549</a>
                     </p>
-                    <a href="mailto:support@alsharq.co" class="text-white mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</a>
+                    <a href="mailto:support@alsharq.co" class="text-white mb-2"><i
+                            class="fa fa-envelope me-3"></i>support@alsharq.co</a>
                     <div class="d-flex pt-2">
-                        <a aria-label="Twitter account" class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a aria-label="Facebook page" class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a aria-label="Youtube channel" class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a aria-label="Linkedin profile" class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a aria-label="Twitter account" class="btn btn-outline-light btn-social" href=""><i
+                                class="fab fa-twitter"></i></a>
+                        <a aria-label="Facebook page" class="btn btn-outline-light btn-social" href=""><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a aria-label="Youtube channel" class="btn btn-outline-light btn-social" href=""><i
+                                class="fab fa-youtube"></i></a>
+                        <a aria-label="Linkedin profile" class="btn btn-outline-light btn-social" href=""><i
+                                class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -240,7 +248,8 @@
 
 
     <!-- Back to Top -->
-    <a aria-label="Back to top" href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a aria-label="Back to top" href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i
+            class="bi bi-arrow-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
