--- a/service.html
+++ b/service.html
@@ -57,8 +57,8 @@
         <div style="display: flex; flex-direction: row; align-items: center; column-gap: 10px;">
             <div>
                 <small>
-                    <i class="fa fa-phone-alt text-primary me-1"></i>
-                    <a class="text-primary" href="tel:+965 9989 1549">+965 9989 1549</a>
+                    <i class="fa fa-phone-alt text-secondary me-1"></i>
+                    <a class="text-secondary" href="tel:+965 9989 1549">+965 9989 1549</a>
                 </small>
             </div>
             <a href="/contact.html#send-message" style="padding: 5px; font-size: small;" class="btn btn-primary">Get A
