seo: fix contrast

--- a/about.html
+++ b/about.html
@@ -80,8 +80,8 @@
             </div>
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <a class="text-primary" href="tel:+965 9989 1549">+965 9989 1549</a>
+                    <small class="fa fa-phone-alt text-secondary me-2"></small>
+                    <a class="text-secondary" href="tel:+965 9989 1549">+965 9989 1549</a>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <a aria-label="Facebook page" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
